# WD2-ScriptHook

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yml
lua/: README.md
src/core/: CMakeLists.txt  core.c  core.h  crash_report.c  crash_report.h  game_api.c  game_api.h  hook_manager.c  hook_manager.h  lua_engine.c  lua_engine.h  pattern_scan.c  pattern_scan.h  render.c  render.h  script_loader.c  script_loader.h
src/crashpad/: CMakeLists.txt  main.c
src/dinput8/: CMakeLists.txt  dinput8.c  dinput8.def  dinput8.h
src/lua/: lauxlib.h  linternal.h  lobject.h  lstate.h  lua.h  lua_stub.c  luaconf.h  lualib.h
src/minhook/: MinHook.c  MinHook.h
src/skia/: CMakeLists.txt  skia.h  skia_font.c  skia_image.c  skia_render.c  skia_surface.c
